--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -60,7 +60,7 @@ p {
   margin-right: 10px;
   font-size: 1.7em;
   color: #fff;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   letter-spacing: -1px;
   padding-top: 10px;
   font-weight: bold;
