--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,12 +3,12 @@
   <div class="container">
     <h1 style="text-shadow: 0 0 10px #000; color: transparent;">
       <font color="white">
-        Simple Graph
+        Simple Data Graph
       </font>
     </h1>
 
     <h2 style="text-shadow: 0 0 10px #000; color: transparent;">
-      <font color="gray">
+      <font color="white">
         This is a web application that can easily display received data graphically.
       </font>
     </h2>
